gitops/espresso/infrastructure/configs/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: gateway
spec:
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zigbee2mqtt
  namespace: gateway
subsets:
  - addresses:
      - ip: 10.0.187.1
    ports:
      - port: 8082
