gitops/espresso/infrastructure/configs/zigbee2mqtt/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - zigbee.gullhaugveien.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          port: 8082
